# output/product/types/ProductUpdate.ts
@@ -1,0 +1,8 @@
+/**
+ * @generated from OpenAPI schema: ProductUpdate
+ */
+export interface ProductUpdate {
+  name?: string;
+  price?: number;
+  description?: string;
+}
